# empirical_business_economics_for_python

./: README.md  pyproject.toml
section-2/: __mixed_logit_model.iter  __mixed_logit_seed_1.iter  __mixed_logit_seed_10.iter  __mixed_logit_seed_11.iter  __mixed_logit_seed_12.iter  __mixed_logit_seed_13.iter  __mixed_logit_seed_14.iter  __mixed_logit_seed_15.iter  __mixed_logit_seed_16.iter  __mixed_logit_seed_17.iter  __mixed_logit_seed_18.iter  __mixed_logit_seed_19.iter  __mixed_logit_seed_2.iter  __mixed_logit_seed_20.iter  __mixed_logit_seed_21.iter  __mixed_logit_seed_22.iter  __mixed_logit_seed_23.iter  __mixed_logit_seed_24.iter  __mixed_logit_seed_25.iter  __mixed_logit_seed_26.iter  __mixed_logit_seed_27.iter  __mixed_logit_seed_28.iter  __mixed_logit_seed_29.iter  __mixed_logit_seed_3.iter  __mixed_logit_seed_30.iter  __mixed_logit_seed_4.iter  __mixed_logit_seed_5.iter  __mixed_logit_seed_6.iter  __mixed_logit_seed_7.iter  __mixed_logit_seed_8.iter  __mixed_logit_seed_9.iter  biogeme.toml  mixed_logit_by_biogeme.py  mixed_logit_model.html  mixed_logit_model.yaml  mixed_logit_model~00.html  mixed_logit_model~00.yaml  multi_logit_by_biogeme.py  plot_beta_by_mixed_logit.py  plot_beta_kinoko_by_initial_values.py
section-3/: estimate.py  preprocess.py
