[project]
name = "empirical_business_economics_for_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biogeme>=3.3.2",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "lightgbm>=4.6.0",
    "linearmodels>=7.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
